force-app/main/default/objects/Buyer_Info__c/Buyer_Info__c.object-meta.xml
<CustomObject>
    <label>Buyer Info</label>
    <nameField>
        <label>Buyer Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BuyerInfos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>