force-app/main/default/objects/Buyer_Info__c/fields/Candiadate_Name__c.field-meta.xml
<CustomField>
    <fullName>Candiadate_Name__c</fullName>
    <label>Candiadate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>