force-app/main/default/objects/Buyer_Info__c/fields/candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>candidate_Email__c</fullName>
    <label>candidate Email</label>
    <type>Email</type>
</CustomField>