force-app/main/default/objects/Buyer_Info__c/fields/Expected_Price__c.field-meta.xml
<CustomField>
    <fullName>Expected_Price__c</fullName>
    <label>Expected Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>